--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Setting the title of the webpage -->
     <title>Cache Bank Landing Page</title>
+
+    <!-- Importing Tailwind CSS from a CDN -->
+    <script src="https://cdn.tailwindcss.com"></script> <!--added PS-->
+
+    <!-- Configuring Tailwind CSS with custom theme settings -->
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+              }
+            }
+          }
+        }
+      </script> <!--added PS-->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
@@ -12,28 +33,102 @@
     <link rel="stylesheet" href="./assets/css/loopple/loopple.css">
 </head>
 
-<body class="null">
-    <div class="container flex flex-col mx-auto">
-        <!-- Main container with navigation and header content -->
+<body class="bg-gray-100">
+    <div id="app">
+        <!--COMPONENT 1-->
+        <div class="mx-auto bg-white">
+            <!-- Main container with navigation and header content -->
+       <div class=" relative flex flex-wrap items-center justify-between w-full shrink-0"> </div> <!--added PS-->
+
+        <!-- Navigation bar -->
+       <nav class="flex flex-wrap justify-between items-center py-4 w-full shrink-0 ">
+         <div class="px-4">
+           <!-- Company logo -->
+            <img class="h-8"  src="./assets/component-1/navigation/cache-bank-logo.png">   
+         </div> <!--added these 4 divs + btn Ps remember-->
+
+         <!-- Navigation links -->
+           <div class="md:flex items-center  text-black gap-12">
+               <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900">Product</a>
+               <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900">Features</a>
+               <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900">Get Started</a>
+               <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900">Contact</a>
+           </div>
+
+            <!-- Login and Sign Up buttons -->
+           <div class="gap-8 p-4 items-center md:flex" >
+             <button class="text-sm font-normal text-dark-grey-800 hover:text-dark-grey-900">Log In</button>
+             <button class="px-4 py-2 text-sm font-bold text-blue bg-green-500 rounded-xl hover:bg-pink-500">Sign Up</button>
+           </div>
+
+           <!-- Mobile-menu-toggle button -->
+           <button class="p-4 md:hidden" id="mobile-menu-toggle"> 
+            <svg
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            class="h-6 w-6"
+            fill="none"
+            >
+            <g clip-path="url(#clip0_429_11066)">
+              <path
+                d="M3 6.00092H21M3 12.0009H21M3 18.0009H21"
+                stroke="#292929"
+                stroke-width="2.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </g>
+            <defs>
+              <clipPath id="clip0_429_11066">
+                <rect
+                  width="24"
+                  height="24"
+                  fill="white"
+                  transform="translate(0 0.000915527)"
+                />
+              </clipPath>
+            </defs>
+          </svg>
+           </button>
+       </nav>
+           <div></div>
+        </div>
+        <div class="w-full">
+            <!-- Wide full-width container for additional content -->
+        </div>
+        <div class="container mx-auto">
+            <!-- Centered container for more content -->
+        </div>
+        <div class="w-full">
+            <!-- Wide full-width container for additional content -->
+        </div>
+        <div class="w-full">
+            <!-- Wide full-width container for additional content -->
+        </div>
+
     </div>
-    <div class="w-full">
-        <!-- Wide full-width container for additional content -->
-    </div>
-    <div class="container mx-auto">
-        <!-- Centered container for more content -->
-    </div>
-    <div class="w-full">
-        <!-- Wide full-width container for additional content -->
-    </div>
-    <div class="w-full">
-        <!-- Wide full-width container for additional content -->
-    </div>
+    <!--Footer (added Ps)-->
     <div class="w-full bg-green-500">
         <!-- Full-width footer container with green background -->
     </div>
+
+    <!-- Script for mobile menu toggle -->
+    <script> /*added Ps for the mobile menu*/
+        document.getElementById("mobile-menu-toggle").addEventListener("click", Function(), {
+            document:querySelector("md:flex").classList.toggle("hidden"),
+        })
+    </script>
+
+<!-- Loopple scripts -->
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/countup.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/countto.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/leaflet.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/maps.js"></script>
+
+    <!-- Importing local script files -->
     <script src="./assets/js/loopple/loopple.js"></script>
+    <script type="module" src="/main.js"></script>
 </body>
+
+</html>
