--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
 
     <!-- Setting the title of the webpage -->
     <title>Cache Bank Landing Page</title>
-
+    <link rel="stylesheet" href="styles.css">
     <!-- Importing Tailwind CSS from a CDN -->
     <script src="https://cdn.tailwindcss.com"></script> <!--added PS-->
 
@@ -120,6 +120,39 @@
         })
     </script>
 
+    <!--COMPONENT 2: Hero and Endorsements-->
+    <!--HERO-->
+    <section class="grid w-full grid-cols-1 my-auto mt-12 mb-8 md:grid-cols-2 xl:gap-14 md:gap-5">
+     <!-- Text Content -->
+      <div class="flex flex-col justify-center col-span-1 text-center lg:text-start">
+         <!-- Main Heading -->
+         <h1 class="mb-8 text-4xl font-extrabold leading-tight lg:text-6xl text-dark-grey-900">
+           The Clever Place to Keep Your Cache
+         </h1>
+         <!--Description-->
+         <p class="mb-6 text-base font-normal leading-7 lg:w-3/4 text-grey-900">
+             Cache Bank is designed exclusively for software developers. We understand your financial needs are as unique as the code you write.
+             Our services offer cutting-edge financial solutions that help you take care of your cash. 
+         </p>
+           <!--Action Buttons-->
+         <div class="flex flex-col items-center gap-4 lg:flex-row">
+             <button class="flex items-center py-4 text-sm font-bold text-white px-7 focus:ring-4 focus:ring-purple-blue-100 transition duration-300 rounded-xl bg-green-500 hover:bg-pink-500">
+                Join Cache Now
+             </button>
+             <button class="flex items-center py-4 text-sm font-bold text-white px-7 focus:ring-4 focus:ring-purple-blue-100 transition duration-300 rounded-xl bg-green-500 hover:bg-pink-500">
+                Join Our Discord Server
+             </button>
+         </div>
+   
+      </div>
+      <!--Image section-->
+      <div class="items-center justify-end hidden col-span-1 md:flex"> 
+         <img class="w-4/5 rounded-md" src="assets/component-2/hero-image.png" alt="header image">
+      </div>
+
+    </section>
+
+   
 <!-- Loopple scripts -->
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/countup.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/countto.js"></script>
