--- a/index2.html
+++ b/index2.html
@@ -338,8 +338,19 @@
         and sharing insights within the software development industry</p>
    </div>
  </div>
- 
  <!--END OF CARD SECTION-->
+</div>
+<!--COMPONENT 4 Stats and getting started-->
+<!--STATS Section-->
+<div class="w-full">
+  <!-- Centered stats container with spacing -->
+  <div class="container flex flex-col items-center gap-16 mx-auto my-30">
+      <!-- Grid layout for displaying stats -->
+      <div class="grid w-full grid-cols-1 lg:grid-cols-4 md:grid-cols-2 gap-y-8">
+
+</div>
+
+
 
 </div>
 
