--- a/index2.html
+++ b/index2.html
@@ -344,9 +344,32 @@
 <!--STATS Section-->
 <div class="w-full">
   <!-- Centered stats container with spacing -->
-  <div class="container flex flex-col items-center gap-16 mx-auto my-30">
+  <div class="container flex flex-col items-center gap-16 mx-auto my-32">
       <!-- Grid layout for displaying stats -->
       <div class="grid w-full grid-cols-1 lg:grid-cols-4 md:grid-cols-2 gap-y-8">
+         <!--Statistic Blocks-->
+         <div class="flex flex-col items-center">
+           <!-- Block 1: Hours Saved -->
+          <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900"><span id="countto1" countto="250">250</span>+</h3>
+          <p class="text-base font-medium leading-7 text-center text-dark-grey-600">Hours Saved Sitting in the Bank</p>
+        </div>
+        <!-- Block 2: Cache Saved -->
+        <div class="flex flex-col items-center">
+          <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900"><span id="countto2" countto="12">12</span>m</h3>
+          <p class="text-base font-medium leading-7 text-center text-dark-grey-600">Cache Saved</p>
+        </div>
+        <!-- Block 3: Global Partners -->
+        <div class="flex flex-col items-center">
+          <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900"><span id="countto3" countto="2600" data-decimal="1">2.8</span>k+</h3>
+          <p class="text-base font-medium leading-7 text-center text-dark-grey-600">Global Partners</p>
+        </div>
+        <!-- Block 4: Happy Developers -->
+        <div class="flex flex-col items-center">
+          <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900"><span id="countto4" countto="18000" >18,000</span>+</h3>
+          <p class="text-base font-medium leading-7 text-center text-dark-grey-600">Happy Developers</p>
+        </div>
+      </div>
+</div>
 
 </div>
 
