--- a/index2.html
+++ b/index2.html
@@ -370,8 +370,19 @@
         </div>
       </div>
 </div>
-
 </div>
+<!--END OF STATISTIC BLOCKS-->
+
+<!--GETTING STARTED-->
+<div class="w-full">
+  <!-- Centered container for getting started -->
+  <div class="container flex flex-col items-center gap-16 mx-auto my-30">
+     <!-- Grid layout for getting started content -->
+    <div class="grid w-full grid-cols-1 gap-32 lg:grid-cols-2">
+      <!-- Background image block-->
+      <div class="bg-cover bg-center hidden lg:block rounded-3xl" style="background-image:url(assets/component-4/getting-started.png)">
+      </div>
+
 
 
 
