--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <!-- Setting the title of the webpage -->
     <title>Cache Bank Landing Page</title>
     <!-- Importing Tailwind CSS from a CDN -->
-    <!--<script src="https://cdn.tailwindcss.com"></script> --><!--added PS-->
+    <script src="https://cdn.tailwindcss.com"></script> <!--added PS-->
 
     <!-- Configuring Tailwind CSS with custom theme settings -->
     <script>
@@ -47,21 +47,21 @@
          </div> <!--added these 4 divs + btn Ps remember-->
 
          <!-- Navigation links -->
-           <div class="md:flex items-center  text-black gap-12">
-               <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-700">Product</a>
-               <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900">Features</a>
-               <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900">Get Started</a>
-               <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900">Contact</a>
+           <div id="mobile-menu" class="hidden md:flex justify-between items-center  text-black gap-12">
+               <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-700" href="#Product">Product</a>
+               <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900" href="#Features">Features</a>
+               <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900" href="#Get-Started">Get Started</a>
+               <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900" href="#Contact">Contact</a>
            </div>
 
             <!-- Login and Sign Up buttons -->
-           <div class="gap-8 p-4 items-center md:flex" >
+           <div class=" hidden gap-8 p-4 items-center md:flex" >
              <button class="text-sm font-normal text-dark-grey-800 hover:text-dark-grey-900">Log In</button>
              <button class="px-4 py-2 text-sm font-bold text-blue bg-green-500 rounded-xl hover:bg-pink-500">Sign Up</button>
            </div>
 
            <!-- Mobile-menu-toggle button -->
-           <button class="p-4 md:hidden" id="mobile-menu-toggle"> 
+           <button id="mobile-menu-toggle" class="p-4 md:hidden" > 
             <svg
             fill="none"
             viewBox="0 0 24 24"
@@ -90,40 +90,36 @@
             </defs>
           </svg>
            </button>
+           <!-- Mobile Menu: Hidden by default, shown when triggered -->
+           <div class="absolute hidden md:hidden  flex-col items-start justify-center w-full gap-3 overflow-hidden bg-white max-h-screen top-full px-4 py-8 shadow-main" id="mobile-menu">
+             <!-- Navigation Links: Directs the user to different sections of the website -->
+                <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900" href="Product">Product</a>
+                <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900" href="Features">Features</a>
+                <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900" href="Get Started">Get Started</a>
+                <a class="text-sm font-normal text-dark-grey-700 hover:text-grey-900" href="Contact">Contact</a>
+               <button class="text-sm font-normal text-dark-grey-800 hover:text-dark-grey-900">Log In</button>
+               <button class="px-4 py-2 text-sm font-bold text-blue bg-green-500 rounded-xl hover:bg-pink-500">Sign Up</button>
+             
+           </div>
        </nav>
-           <div></div>
-        </div>
-        <div class="w-full">
-            <!-- Wide full-width container for additional content -->
-        </div>
-        <div class="container mx-auto">
-            <!-- Centered container for more content -->
-        </div>
-        <div class="w-full">
-            <!-- Wide full-width container for additional content -->
-        </div>
-        <div class="w-full">
-            <!-- Wide full-width container for additional content -->
-        </div>
-
+       </div>
     </div>
-    <!--Footer (added Ps)-->
-    <div class="w-full bg-green-500">
-        <!-- Full-width footer container with green background -->
-    </div>
-
-    <!-- Script for mobile menu toggle -->
-    <script> /*added Ps for the mobile menu*/
-        document.getElementById("mobile-menu-toggle").addEventListener("click", function() {
-            document.querySelectorAll("md:flex").classList.toggle("hidden")
-        })
-    </script>
+<!-- Script for mobile menu toggle -->
+    <script> 
+       document.getElementById("mobile-menu-toggle").addEventListener("click", function() {
+      var mobileMenu = document.getElementById("mobile-menu");
+      if (mobileMenu) {
+        mobileMenu.classList.toggle("hidden");
+      }
+    });
+  
+  </script>
 
     <!--COMPONENT 2: Hero and Endorsements-->
     <!--HERO-->
     <section class="grid w-full grid-cols-1 my-auto mt-12 mb-8 md:grid-cols-2 xl:gap-14 md:gap-5">
      <!-- Text Content -->
-      <div class="flex flex-col justify-center col-span-1 text-center lg:text-start">
+      <div class="flex flex-col justify-center col-span-1 text-center lg:text-start" id="Product">
          <!-- Main Heading -->
          <h1 class="mb-8 text-4xl font-extrabold leading-tight lg:text-6xl text-dark-grey-900">
            The Clever Place to Keep Your Cache
@@ -211,7 +207,7 @@
 
  <!--COMPONENT 3-->
 <!--features-->
-<div class=" container m-auto py-10 flex flex-col items-center justify-center">
+<div class=" container m-auto py-10 flex flex-col items-center justify-center" id="Features">
   <!--HEADER SECTION-->
   <div class=" flex flex-col items-center justify-center mt-12 ">
     <!--Heading-->
@@ -374,7 +370,7 @@
 <!--END OF STATISTIC BLOCKS-->
 
 <!--GETTING STARTED-->
-<div class="w-full">
+<div class="w-full" id="Get-Started">
   <!-- Centered container for getting started -->
   <div class="container flex flex-col items-center gap-16 mx-auto my-30">
      <!-- Grid layout for getting started content -->
@@ -423,15 +419,17 @@
             <h3 class="text-base font-bold leading-tight text-dark-grey-900"><span style="border-color: rgb(217,217,227);border-image: initial;--tw-border-spacing-x:0;--tw-border-spacing-y:0;--tw-translate-x:0;--tw-translate-y:0;--tw-rotate:0;--tw-skew-x:0;--tw-skew-y:0;--tw-scale-x:1;--tw-scale-y:1;--tw-pan-x: ;--tw-pan-y: ;--tw-pinch-zoom: ;--tw-scroll-snap-strictness:proximity;--tw-gradient-from-position: ;--tw-gradient-via-position: ;--tw-gradient-to-position: ;--tw-ordinal: ;--tw-slashed-zero: ;--tw-numeric-figure: ;--tw-numeric-spacing: ;--tw-numeric-fraction: ;--tw-ring-inset: ;--tw-ring-offset-width:0px ;--tw-ring-offset-color:#fff ;--tw-ring-color:rgb(69,89,164,.5) ;--tw-ring-offset-shadow:0 0 transparent;--tw-ring-shadow:0 0 transparent ;--tw-shadow:0 0 transparent ;--tw-shadow-colored:0 0 transparent ;--tw-blur: ;--tw-brightness: ;--tw-contrast: ;--tw-grayscale: ;--tw-hue-rotate: ;--tw-invert: ;--tw-saturate: ;--tw-sepia: ;--tw-drop-shadow: ;--tw-backdrop-brightness: ;--tw-backdrop-contrast: ;--tw-backdrop-grayscale: ;--tw-backdrop-hue-rotate: ;--tw-backdrop-invert: ;--tw-backdrop-opacity: ;--tw-backdrop-saturate: ;--tw-backdrop-sepia: ;color:var(--tw-prose-bold) ; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ; white-space-collapse:preserve ;">Verify and Submit</span></h3>
             <p class="text-base font-medium leading-7 text-dark-grey-600"><span style="color: rgb(55,65,81);font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; white-space-collapse:preserve ; ">Check your information, agree to terms, and submit for the account approval.</span></p>
           </div>
-
-
-
-
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
 
 
    
 <!-- Loopple scripts -->
+
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/countup.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/countto.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/leaflet.js"></script>
