--- a/index2.html
+++ b/index2.html
@@ -478,7 +478,13 @@
       </div>
    </div>
 </div>
+</div>
 
+<!--Footer-->
+<div class="w-full bg-green-500">
+   <!-- Container for footer content -->
+  <div class="container flex flex-col mx-auto">
+     <div class="flex flex-col items-center gap-6 mb-8 ">
 
 
 
