Add copyright section with styling and close container divs

--- a/index2.html
+++ b/index2.html
@@ -538,6 +538,17 @@
             
           </a>
 
+        </div>
+        <!--Copyright-->
+        <div class="flex items-center mb-10">
+          <p class="text-base font-normal leading-7 text-center">2024 Cache Bank. All rights reserved</p>
+        </div>
+
+     </div>
+  </div>
+</div>
+
+
 
 
 
