--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!--HERO-->
     <section class="grid w-full grid-cols-1 my-auto mt-12 mb-8 md:grid-cols-2 xl:gap-14 md:gap-5 px-12" >
      <!-- Text Content -->
-      <div class="flex flex-col justify-center col-span-1 text-center lg:text-start" id="Product">
+      <div class="flex flex-col justify-center col-span-1 text-center lg:text-start" id="Products">
          <!-- Main Heading -->
          <h1 class="mb-8 text-4xl font-extrabold leading-tight lg:text-6xl text-dark-grey-900">
            The Clever Place to Keep Your Cache
