Center ‘Getting Started’ steps on mobile view.

--- a/index.html
+++ b/index.html
@@ -365,9 +365,9 @@
           <p class="text-base font-medium leading-7 text-dark-grey-600"><span style="color:rgb(55,65,81);font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></span>Cache Bank simplifies sign-up with a user-friendly website, streamlined account options, and an efficient verification process, making banking accessible and hassle-free for developers. </p>
         </div>
          <!-- Grid layout for steps to get started -->
-        <div class="grid w-full grid-cols-1 md:grid-cols-2 gap-y-16 gap-x-10">
+        <div class="grid w-full items-center text-center grid-cols-1 md:grid-cols-2 gap-y-16 gap-x-10">
              <!-- Step 1: Visit Cache Bank website -->
-           <div class="flex flex-col items-start gap-1">
+           <div class="flex flex-col items-start gap-1 items-center" >
              <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500">
               <span class="text-base font-bold leading-7 text-white">1</span>
              </div>
@@ -375,7 +375,7 @@
              <p class="text-base font-medium leading-7 text-dark-grey-600"><span style="color: rgb(55,65,81);font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"> Go to Cache Bank,click "Sign Up" or "Open an Account."</span></p>
            </div>
            <!-- Step 2: Choose Account Type -->
-           <div class="flex flex-col items-start gap-1">
+           <div class="flex flex-col items-start gap-1 items-center">
             <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500">
              <span class="text-base font-bold leading-7 text-white">2</span>
             </div>
@@ -383,7 +383,7 @@
             <p class="text-base font-medium leading-7 text-dark-grey-600"><span style="color: rgb(55,65,81);font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Select from checking,savings,or developer-specific accounts.</span></p>
           </div>
            <!-- Step 3: Provide Personal Information -->
-          <div class="flex flex-col items-start gap-1">
+          <div class="flex flex-col items-start gap-1 items-center">
             <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500">
              <span class="text-base font-bold leading-7 text-white">3</span>
             </div>
@@ -391,7 +391,7 @@
             <p class="text-base font-medium leading-7 text-dark-grey-600"><span style="color: rgb(55,65,81);font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Complete the form with your details and identification for security.</span></p>
           </div>
            <!-- Step 4: Verify and Submit -->
-          <div class="flex flex-col items-start gap-1">
+          <div class="flex flex-col items-start gap-1 items-center">
             <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500">
              <span class="text-base font-bold leading-7 text-white">4</span>
             </div>
